Recette : fix home alignment iphone SE and scrollable end card

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -35,14 +35,16 @@ ion-toolbar {
   height: 100%;
   align-items: center;
   justify-content: center;
+  text-align: right;
 }
 
 .title-wrapper {
+  display: inline-block;
   width: 85%;
   min-width: 300px;
   margin-right: -10px;
-  margin-left: auto;
   padding: 2em;
+  text-align: left;
   background: var(--ion-color-inria);
   clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 90%);
 
